--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,6 @@
 group 'com.rwscode.plugin.flutter_android_info'
 version '1.0'
+def args = ["-Xlint:deprecation","-Xlint:unchecked","-Werror"]
 
 buildscript {
     repositories {
@@ -17,6 +18,10 @@ rootProject.allprojects {
         google()
         mavenCentral()
     }
+}
+
+project.getTasks().withType(JavaCompile){
+    options.compilerArgs.addAll(args)
 }
 
 apply plugin: 'com.android.library'
