--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,7 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -26,7 +27,7 @@ android {
         namespace 'com.example.flutter_android_info'
     }
 
-    compileSdkVersion 33
+    compileSdkVersion 34
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -38,6 +39,17 @@ android {
     }
 
     dependencies {
+        implementation('com.github.gzu-liyujiang:Android_CN_OAID:4.2.9') {
+            // 如果使用了移动安全联盟SDK，共存的话需排除掉本项目依赖的华为/荣耀官方广告标识服务SDK，因为移动安全联盟SDK也依赖了华为/荣耀的SDK
+            // 如果华为官方广告标识服务SDK下载失败或编译报错的话，可考虑在 build.gradle 中增加以下配置：
+            // repositories { maven { url 'https://developer.huawei.com/repo' } }
+            // runtimeOnly "com.huawei.hms:ads-identifier:3.4.62.300"
+            exclude group: 'com.huawei.hms', module: 'ads-identifier'
+            // 荣耀官方广告标识服务SDK同理：
+            // repositories { maven { url 'https://developer.hihonor.com/repo' } }
+            // runtimeOnly "com.hihonor.mcs:ads-identifier:1.0.2.301"
+            exclude group: 'com.hihonor.mcs', module: 'ads-identifier'
+        }
         testImplementation 'junit:junit:4.13.2'
         testImplementation 'org.mockito:mockito-core:5.0.0'
     }
@@ -45,9 +57,9 @@ android {
     testOptions {
         unitTests.all {
             testLogging {
-               events "passed", "skipped", "failed", "standardOut", "standardError"
-               outputs.upToDateWhen {false}
-               showStandardStreams = true
+                events "passed", "skipped", "failed", "standardOut", "standardError"
+                outputs.upToDateWhen { false }
+                showStandardStreams = true
             }
         }
     }
