--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_android_info
-description: "A flutter plugin to get android information such as Build Info & DevideId & ApkMd5"
-version: 1.0.2
+description: "A flutter plugin to get android information such as Build Info & AndroidId & DevideId & ApkMd5"
+version: 1.1.0
 homepage: https://github.com/rwscode/flutter_android_info
 
 environment:
