--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,6 +17,7 @@ rootProject.allprojects {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        maven { url 'https://developer.huawei.com/repo/' }
     }
 }
 
